<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/apply_job_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/apply_job_scrollview_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip" >

        <LinearLayout
            android:id="@+id/apply_job_cover_note_title_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/apply_job_cover_note_title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_weight="0.25"
                android:paddingRight="10dip"
                android:text="@string/cover_note_title"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/apply_job_dummy"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="0.75" />
        </LinearLayout>

        <EditText
            android:id="@+id/apply_job_cover_note"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/apply_job_cover_note_title_row"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:scrollbars="vertical"
            android:textSize="12sp" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/apply_job_name_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/apply_job_cover_note"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/apply_job_name_title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="0.15"
                android:paddingRight="10dip"
                android:text="@string/name_title"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/apply_job_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:layout_weight="0.85"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/apply_job_email_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/apply_job_name_row"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/apply_job_email_title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="0.15"
                android:paddingRight="10dip"
                android:text="@string/email_title"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/apply_job_email"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:layout_weight="0.85"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/apply_job_phone_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/apply_job_email_row"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/apply_job_phone_title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="0.15"
                android:paddingRight="10dip"
                android:text="@string/phone_title"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/apply_job_phone"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:layout_weight="0.85"
                android:ems="10"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/apply_job_cv_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/apply_job_phone_row"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/apply_job_cv_title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="0.15"
                android:paddingRight="10dip"
                android:text="@string/cv_title"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/apply_job_cv"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="0.65"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/cv_name"
                android:paddingRight="10dip" />

            <Button
                android:id="@+id/apply_job_cv_btn"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:layout_weight="0.20"
                android:ems="10"
                android:text="@string/cv_btn_txt" />
        </LinearLayout>

        <Button
            android:id="@+id/apply_job_apply_btn"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:layout_below="@+id/apply_job_cv_row"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/search_button"
            android:text="@string/apply_btn_txt"
            android:textColor="@color/white" />
    </RelativeLayout>
    
<!--             android:onClick="sendApplication" -->

</ScrollView>