<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dip"
    android:layout_marginRight="5dip"
    android:background="@color/white"
    android:paddingBottom="15dip"
    android:paddingTop="15dip" >

    <TextView
        android:id="@+id/title_job_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="2dip"
        android:layout_marginRight="2dip"
        android:gravity="center"
        android:textColor="@color/holo_blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!--
    Create an underline view 
    <LinearLayout
        android:id="@+id/line_job_item"
        android:layout_below="@+id/title_job_item"
        android:layout_height="1dip"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="5dip"
        android:background="@color/background">        
    </LinearLayout>
    -->

    <LinearLayout
        android:id="@+id/text_layout_job_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_job_item"
        android:orientation="horizontal" 
        android:baselineAligned="false" >

        <RelativeLayout
            android:id="@+id/details_job_item"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="5dip"
            android:layout_weight="0.9" >

            <LinearLayout
                android:id="@+id/company_line_job_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/company_title_job_item"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:layout_marginTop="0dip"
                    android:layout_weight="0.3"
                    android:maxLines="2"
                    android:text="@string/company_title"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/company_name_job_item"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:layout_marginTop="0dip"
                    android:layout_weight="0.7"
                    android:maxLines="2"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/location_line_job_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_line_job_item"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/location_title_job_item"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:layout_marginTop="0dip"
                    android:layout_weight="0.3"
                    android:text="@string/location_title"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/location_name_job_item"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:layout_marginTop="0dip"
                    android:layout_weight="0.7"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_line_job_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_line_job_item"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/date_title_job_item"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:layout_marginTop="0dip"
                    android:layout_weight="0.3"
                    android:text="@string/date_posted_title"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/date_job_item"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:layout_marginTop="0dip"
                    android:layout_weight="0.7"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_layout_job_item"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:layout_weight="0.1" 
            android:descendantFocusability="blocksDescendants" >

            <ImageButton
                android:id="@+id/btn_save_job_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_star_off"
				android:focusable="false"
				android:contentDescription="@string/save_to_favourites" />

            <ImageButton
                android:id="@+id/btn_delete_job_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_star_on"
                android:focusable="false"
                android:visibility="invisible" 
                android:contentDescription="@string/remove_from_favourites"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>